CustomObjects/objects/invoiceit_s__Invoice__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>Storing the Invoices.</description>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Amount__c</fullName>
        <description>It is the sum of invoice lines amount excluding VAT/Tax</description>
        <inlineHelpText>It is the sum of invoice lines amount excluding VAT/Tax</inlineHelpText>
        <label>Subtotal</label>
        <summarizedField>invoiceit_s__Invoice_Lines__c.invoiceit_s__Line_Amount__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Invoice_Lines__c.invoiceit_s__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is loop up to Contact for Billing Contact</description>
        <inlineHelpText>This is the Contact to which the Invoice is sent by email</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Billing Contact)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer cancelled the order</fullName>
                </value>
                <value>
                    <fullName>Duplicate order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Credited_Amount__c</fullName>
        <label>Credited Amount</label>
        <summarizedField>invoiceit_s__Credit_Line__c.invoiceit_s__Total_Line_Value__c</summarizedField>
        <summaryFilterItems>
            <field>invoiceit_s__Credit_Line__c.invoiceit_s__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>invoiceit_s__Credit_Line__c.invoiceit_s__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Custom_Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Obsolete_Invoice Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Cut_off_Date__c</fullName>
        <label>Cut off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Debit_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Delivery_Type__c</fullName>
        <description>Delivery Type like Print,Email or both.If it selected as email or both then the email is sent to the Billing Contact on invoice.</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email &amp; Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Value__c</fullName>
        <description>This is the total Discount provided on this Invoice.</description>
        <inlineHelpText>This is the total Discount provided on this Invoice.</inlineHelpText>
        <label>Discount Value</label>
        <summarizedField>invoiceit_s__Invoice_Lines__c.invoiceit_s__Discount_Value__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Invoice_Lines__c.invoiceit_s__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Due_Date__c</fullName>
        <description>When is the last date of invoice to be paid.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it checked means Email has been sent to the customer.</description>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exception_Log__c</fullName>
        <label>Exception Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exchange_Rate_Applied__c</fullName>
        <description>Exchange Rate Applied</description>
        <inlineHelpText>If you are a multi currency org, this field will hold the Exchange Rate between the Invoice Currency and your Corporate Currency. 
Value in Corporate Currency = Value in Invoice Currency x Exchange Rate Applied</inlineHelpText>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Batch__c</fullName>
        <label>Invoice Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch 1</fullName>
                </value>
                <value>
                    <fullName>Batch 2</fullName>
                </value>
                <value>
                    <fullName>Batch 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Currency_Symbol__c</fullName>
        <formula>invoiceit_s__CurrencyL__r.invoiceit_s__Currency_Symbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Reference__c</fullName>
        <description>This field is used to hold the custom invoice number you need. This can have a specific suffix, prefix or a sequence number based on your legal entity used.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to hold the custom invoice number you need. This can have a specific suffix, prefix or a sequence number based on your legal entity used.
Search Invoice IT documentation for &quot;Legal Entity&quot; to find out how to use this field</inlineHelpText>
        <label>Invoice Reference</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Run_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up relationship to the Invoice Run.Invoice is child of  Invoice Run.
This field tells from which Invoice Run the Invoice is generated.</description>
        <label>Invoice Run (Created By)</label>
        <referenceTo>invoiceit_s__Invoice_Run__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_State__c</fullName>
        <label>Invoice State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Proforma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Last_Processing_Date__c</fullName>
        <label>Last Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Net_Total__c</fullName>
        <description>This would be Subtotal - Discount value</description>
        <formula>invoiceit_s__Amount__c -  invoiceit_s__Discount_Value__c</formula>
        <inlineHelpText>This would be Subtotal - Discount value</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__No_Of_Instalments__c</fullName>
        <label>No Of Instalments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__No_of_Tries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Number_Of_Invoice_Lines__c</fullName>
        <description>Number Of Invoice Lines</description>
        <label>Number Of Invoice Lines</label>
        <summaryForeignKey>invoiceit_s__Invoice_Lines__c.invoiceit_s__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <summarizedField>invoiceit_s__Payment_Allocation__c.invoiceit_s__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>invoiceit_s__Payment_Allocation__c.invoiceit_s__Status__c</field>
            <operation>equals</operation>
            <value>Complete, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>invoiceit_s__Payment_Allocation__c.invoiceit_s__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Batch__c</fullName>
        <label>Payment Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch 1</fullName>
                </value>
                <value>
                    <fullName>Batch 2</fullName>
                </value>
                <value>
                    <fullName>Batch 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Request_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Use this field if you want to process partial payments for the Inovice</description>
        <label>Payment Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Status__c</fullName>
        <formula>IF(
AND(invoiceit_s__Unpaid_Amount__c &gt; 0, invoiceit_s__Paid_Amount__c &gt; 0),
&apos;Partially Paid&apos;, IF(invoiceit_s__Unpaid_Amount__c &gt; 0, &apos;Unpaid&apos;, &apos;Paid&apos;)
)</formula>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Preferred_Payment_Date__c</fullName>
        <label>Preferred Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Regular_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regular Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is loop up to contact for Shipping Contact</description>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Shipping Contact)</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status_Flag__c</fullName>
        <description>Yellow - Invoices that are Active
Green - Invoices that have been Paid
Red - Invoices that are Overdue
White - Invoices that have been Cancelled</description>
        <formula>IF(ISPICKVAL(invoiceit_s__Invoice_Status__c, &apos;Cancelled&apos;),Image(&quot;https://c.na12.content.force.com/servlet/servlet.ImageServer?id=015U00000002jv0&amp;oid=00DU0000000HSiW&quot;,&quot;White&quot;),
IF((invoiceit_s__Payment_Status__c == &apos;Paid&apos;), Image(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;) ,
     IF(TODAY() &gt;  invoiceit_s__Due_Date__c &amp;&amp; (invoiceit_s__Payment_Status__c != &apos;Paid&apos;),                                               
            Image(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
            Image(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;)
        )
   )
)</formula>
        <inlineHelpText>Yellow - Invoices that are Active
Green - Invoices that have been Paid
Red - Invoices that are Overdue
White - Invoices that have been Cancelled</inlineHelpText>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Target_Date__c</fullName>
        <label>Target  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Calculation_Status__c</fullName>
        <label>Tax Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Engine__c</fullName>
        <label>Tax Engine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Avalara AvaTax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax__c</fullName>
        <description>Shows the total amount of Tax  for all invoice lines applied to the invoice</description>
        <inlineHelpText>The total amount of Tax for all invoice lines</inlineHelpText>
        <label>Tax</label>
        <summarizedField>invoiceit_s__Invoice_Lines__c.invoiceit_s__Tax__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Invoice_Lines__c.invoiceit_s__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Invoice_Value__c</fullName>
        <description>Subtotal - Discount + VAT + Tax</description>
        <formula>invoiceit_s__Amount__c  -  invoiceit_s__Discount_Value__c +  invoiceit_s__VAT__c +  invoiceit_s__Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Total Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unpaid_Amount__c</fullName>
        <formula>ROUND(invoiceit_s__Total_Invoice_Value__c, 2) - ROUND(invoiceit_s__Paid_Amount__c, 2) - ROUND( invoiceit_s__Credited_Amount__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unpost_Reason__c</fullName>
        <label>Unpost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order information entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Invoice generated before order adjustment</fullName>
                </value>
                <value>
                    <fullName>Wrong invoice or target dates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__VAT__c</fullName>
        <description>Shows the total amount of VAT for all invoice lines that has been applied to the Invoice</description>
        <inlineHelpText>The total amount of VAT for all invoice lines</inlineHelpText>
        <label>VAT</label>
        <summarizedField>invoiceit_s__Invoice_Lines__c.invoiceit_s__VAT__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Invoice_Lines__c.invoiceit_s__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>invoiceit_s__Account__c</columns>
        <columns>invoiceit_s__Invoice_Date__c</columns>
        <columns>invoiceit_s__Due_Date__c</columns>
        <columns>invoiceit_s__Total_Invoice_Value__c</columns>
        <columns>invoiceit_s__CurrencyL__c</columns>
        <columns>invoiceit_s__Invoice_Status__c</columns>
        <columns>invoiceit_s__Status_Flag__c</columns>
        <columns>invoiceit_s__Payment_Status__c</columns>
        <columns>invoiceit_s__Invoice_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>invoiceit_s__Cancelled_Invoices</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Account__c</columns>
        <columns>invoiceit_s__Invoice_Date__c</columns>
        <columns>invoiceit_s__Total_Invoice_Value__c</columns>
        <columns>invoiceit_s__CurrencyL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>invoiceit_s__Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>invoiceit_s__Unpaid_Invoice_List</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Account__c</columns>
        <columns>invoiceit_s__Billing_Contact__c</columns>
        <columns>invoiceit_s__Due_Date__c</columns>
        <columns>invoiceit_s__Paid_Amount__c</columns>
        <columns>invoiceit_s__Unpaid_Amount__c</columns>
        <columns>invoiceit_s__CurrencyL__c</columns>
        <columns>invoiceit_s__Invoice_Status__c</columns>
        <columns>invoiceit_s__Payment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>invoiceit_s__Unpaid_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>invoiceit_s__Invoice_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>Unpaid Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>